[package]
name = "voxbot"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.3.0"
dotenv = "0.15.0"
glob = "0.3.0"
reqwest = { version = "0.11.13", features = ["json"] }
serde_json = "1.0.91"
serenity = { version = "0.11.5", features = ["voice"] }
songbird = { version = "0.3.0", features = ["serenity"] }
tokio = { version = "1.23.0", features = ["full"] }
